--- a/src/components/1-header/header.css
+++ b/src/components/1-header/header.css
@@ -1,3 +1,16 @@
+/* ==============================================================================
+Table of Contents 
+ ===============================================================================*/
+/* 
+1 - Header Styling
+2 - Button and Icons
+3 - Modal
+4 - Responsive Design 
+*/
+
+/* ==============================================================================
+3 - Modal
+ ===============================================================================*/
 header.flex {
   justify-content: space-between;
   margin-top: 1.2rem;
@@ -43,7 +56,11 @@ header button {
 header button.menu {
   display: none;
 }
-/* Header Icons----------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
+
+/* ==============================================================================
+2 - Button and Icons
+ ===============================================================================*/
+
 header .icon-menu,
 header button.mode,
 header .icon-close {
@@ -82,8 +99,11 @@ header .icon-close:hover {
   font-size: 1.2rem;
    transform: rotate(180deg);
 }
-/* POP UP ----------------------------------------------------------------------------------------------------------------------------------------------------------------------- */
-header .fixed {
+
+/* ==============================================================================
+3 - Modal
+ ===============================================================================*/
+ header .fixed {
   position: fixed;
   inset: 0;
   background-color: #242423c1;
@@ -134,6 +154,9 @@ header .fixed ul.modal li:first-child {
   padding: 0;
 }
 
+/* ==============================================================================
+4 - Responsive Design
+ ===============================================================================*/
 @media (max-width: 700px) {
   header.flex nav {
     display: none;
