--- a/src/components/4-main/main.css
+++ b/src/components/4-main/main.css
@@ -61,7 +61,7 @@ main section.left-section.flex button:hover{
  ===============================================================================*/
 
 main section.right-section.flex{
-    /* flex-grow: 1; */
+    flex-grow: 1;
     flex-wrap: wrap;
     column-gap: 1.6rem;
     row-gap: 2rem;
@@ -84,6 +84,7 @@ main section.right-section.flex{
 }
 .card .box .title{
     color: var(--text-primary);
+    text-transform: capitalize;
 }
 .card .box .sub-title{
     color: var(--text-secondary);
