--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Cairo:wght@200..1000&display=swap");
 
 * {
   margin: 0;
@@ -8,7 +8,9 @@
   box-sizing: border-box;
 }
 html {
-  font-family: "Roboto";
+  font-family: "Roboto";  
+  scroll-behavior: smooth;
+  letter-spacing: .1px;
 }
 :root {
   --primary: #080808;
@@ -21,7 +23,7 @@ html {
   --border: rgba(63, 63, 70, 0.4);
   --title: rgb(244, 244, 245);
   --sub-title: rgb(161, 161, 170);
-  --blue-light: rgba(93, 188, 152,.3);
+  --blue-light: rgba(93, 188, 152, 0.3);
   --blue: rgb(93, 188, 252);
   --icon-glow: 1px 1px 10px #f5cc5c48, 2px 2px 12px #54200048,
     3px 3px 16px #000000;
@@ -37,7 +39,7 @@ body {
   background-color: var(--secondary);
   width: 80%;
   margin: 0 auto;
-  padding: .5rem 3rem;
+  padding: 0.5rem 3rem;
 }
 .devider {
   border-bottom: 2px solid var(--border);
@@ -46,7 +48,6 @@ body {
 .devider:first-of-type {
   border-bottom: 2px solid var(--border);
   margin: 2rem 0;
-  
 }
 /* Header Styiling */
 li {
@@ -70,20 +71,65 @@ button:hover {
   cursor: pointer;
 }
 button:active {
-  scale: .8;
+  scale: 0.8;
+}
+::-webkit-scrollbar {
+  width: 0.88rem;
 }
 
-@media (max-width:1000px) {
-    .container{
-        width: 90%;
-        padding: .5rem 2rem;
-    }
-    
+::-webkit-scrollbar-track {
+  border: 7px solid #171717;
+  box-shadow: inset 0 0 2.5px 2px rgba(0, 0, 0, 0.5);
+  border-radius: 4px;
+  background-color: #000000;
 }
-@media (max-width:500px) {
-    .container{
-        width: 98%;
-        padding: .5rem 1rem;
-    }
-    
+
+::-webkit-scrollbar-thumb {
+  background: #242323;
+  border-radius: 2px;
+  transition: 0.5s;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #181717;
+  border: 0.5px solid #4f4e4e;
+}
+
+.scroll2Top {
+  background-color: var(--yellow);
+  width: 2.6rem;
+  height: 2.6rem;
+  border-radius: 50%;
+  position: fixed;
+  bottom: 2rem;
+  right: 3%;
+  color: rgb(48, 48, 48);
+  text-align: center;
+}
+.scroll2Top:hover {
+  background: transparent;
+  font-size: 1.2rem;
+  scale: 1.1;
+  border: 1px solid var(--yellow);
+  color: var(--yellow);
+  box-shadow: var(--icon-glow-hover);
+}
+/* for Firefox */
+/* html {scrollbar-color: #171717 #242323;}  */
+@media (max-width: 1000px) {
+  .container {
+    width: 90%;
+    padding: 0.5rem 2rem;
+  }
+}
+@media (max-width: 500px) {
+  .container {
+    width: 98%;
+    padding: 0.5rem 1rem;
+  }
+  .scroll2Top {
+    opacity: 0.4;
+    width: 2.2rem;
+    height: 2.2rem;
+  }
 }
