--- a/src/components/1-header/header.css
+++ b/src/components/1-header/header.css
@@ -99,7 +99,10 @@ header .icon-close:hover {
   font-size: 1.2rem;
    transform: rotate(180deg);
 }
-
+header .icon-sun{
+  color: rgb(255, 149, 0);
+  font-size: 1.4rem;
+}
 /* ==============================================================================
 3 - Modal
  ===============================================================================*/
