--- a/src/components/2-hero/hero.css
+++ b/src/components/2-hero/hero.css
@@ -134,6 +134,9 @@ section.hero p.sub-title{
     width: 98%;
     padding: 0.5rem 1rem;
   }
+  section.hero h1.title{
+    font-size: 1rem;
+  }
 }
 
 /* ==============================================================================
