--- a/src/index.css
+++ b/src/index.css
@@ -153,7 +153,7 @@ button:active {
 }
 @media (max-width: 500px) {
   .container {
-    width: 98%;
+    width: 100% !important;
     padding: 0.5rem 1rem;
   }
   .scroll2Top {
