--- a/src/index.css
+++ b/src/index.css
@@ -130,8 +130,8 @@ button:active {
   height: 2.6rem;
   border-radius: 50%;
   position: fixed;
-  bottom: 2rem;
-  right: 3%;
+  bottom: 1%;
+  right: 10%;
   color: rgb(48, 48, 48);
   text-align: center;
 }
