--- a/src/components/2-hero/hero.css
+++ b/src/components/2-hero/hero.css
@@ -116,7 +116,7 @@ section.hero p.sub-title{
 }section.hero .avatar {
   width: 100px;
   height: 100px;
-margin: 0 auto !important;
+
 }
 
 }
@@ -133,6 +133,9 @@ margin: 0 auto !important;
   }
 } */
 @media (max-width: 500px) {
+  .hero-app {
+    width: 100%;
+  }
   .container {
     width: 98%;
     padding: 0.5rem 1rem;
@@ -141,7 +144,14 @@ margin: 0 auto !important;
     font-size: 1.2rem !important;
     line-height: 1.6rem;
   }
+  .right-section.animation{
+  border: 1px solid red;
   
+  translate: 7rem 2rem;
+}
+  .right-section.animation .laptop{
+width: 24rem !important;
+  }
 }
 
 /* ==============================================================================
