--- a/src/components/1-header/header.css
+++ b/src/components/1-header/header.css
@@ -20,14 +20,16 @@ header.flex nav {
   background-color: var(--bg-lighter);
   padding: 1rem 2rem;
   border-radius: 10px;
-  box-shadow: 1px 1px 30px #2d2d2d ,1px 1px 10px #97979747;
-  transition: all 0.7s;
+  box-shadow: var(--nav-shadow);
+  transition:  1s;
   display: flex;
   justify-content: center;
   margin: 0 auto ;
+  border: .1px solid #00000062;
+
 }
 header.flex nav:hover {
-  box-shadow: 4px 4px 40px #f5cc5c2e;
+  box-shadow: 4px 4px 20px #f5e7782e;
   scale: 1.05;
 }
 header button.mode{
@@ -101,7 +103,7 @@ header .icon-close:hover {
 }
 header .icon-sun{
   color: rgb(255, 149, 0);
-  font-size: 1.4rem;
+  font-size: 1.2rem;
 }
 /* ==============================================================================
 3 - Modal
